# portfolio_reporting

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt  ruff.toml  verify_data.py
src/portfolio_reporting/: __main__.py  cli.py  sync.py
src/portfolio_reporting/api/: client.py
src/portfolio_reporting/database/: handler.py  schema.py
src/portfolio_reporting/fetchers/: base.py  budgets.py  companies.py  market_prices.py  om_data.py  power_plants.py  production.py  production_periods.py
src/portfolio_reporting/utils/: __init__.py  config.py  logging_config.py
